--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^13.0.1
   flutter_bloc: ^8.1.3
   meta: ^1.10.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
